
(rule
 (targets coq-pkgs)
 (deps
  (package coq-quickchick)
  workdir/src/quickchick_plugin.cma)
 (action
  (run npx %{env:pkgtool=jscoq} build workdir/src --top QuickChick
                   --load ../mathcomp/coq-pkgs/mathcomp-ssreflect.coq-pkg
                   --load ../extlib/coq-pkgs/extlib.coq-pkg
                   --load ../simpleio/coq-pkgs/simpleio.coq-pkg
                   --package coq-pkgs/quickchick.coq-pkg)))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
