
(rule
 (targets coq-pkgs)
 (deps
  (package quickchick)
  workdir/plugin/quickchick_plugin.cma)
 (action
  (run npx %{env:pkgtool=jscoq} build --workspace %{dep:quickchick.json}
                   --load ../mathcomp/coq-pkgs/mathcomp-ssreflect.coq-pkg
                   --load ../extlib/coq-pkgs/extlib.coq-pkg
                   --load ../simpleio/coq-pkgs/simpleio.coq-pkg)))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
